; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_event.c_hci_reject_conn.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_event.c_hci_reject_conn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i32 }
%struct.hci_cp_reject_conn_req = type { i32, i32 }

@HCI_ERROR_REJ_BAD_ADDR = common dso_local global i32 0, align 4
@HCI_OP_REJECT_CONN_REQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hci_dev*, i32*)* @hci_reject_conn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hci_reject_conn(%struct.hci_dev* %0, i32* %1) #0 {
  %3 = alloca %struct.hci_dev*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.hci_cp_reject_conn_req, align 4
  store %struct.hci_dev* %0, %struct.hci_dev** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = getelementptr inbounds %struct.hci_cp_reject_conn_req, %struct.hci_cp_reject_conn_req* %5, i32 0, i32 1
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @bacpy(i32* %6, i32* %7)
  %9 = load i32, i32* @HCI_ERROR_REJ_BAD_ADDR, align 4
  %10 = getelementptr inbounds %struct.hci_cp_reject_conn_req, %struct.hci_cp_reject_conn_req* %5, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %12 = load i32, i32* @HCI_OP_REJECT_CONN_REQ, align 4
  %13 = call i32 @hci_send_cmd(%struct.hci_dev* %11, i32 %12, i32 8, %struct.hci_cp_reject_conn_req* %5)
  ret void
}

declare dso_local i32 @bacpy(i32*, i32*) #1

declare dso_local i32 @hci_send_cmd(%struct.hci_dev*, i32, i32, %struct.hci_cp_reject_conn_req*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
